--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.16.1"
+    "express": "4.16.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.4",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
