--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "outDir": "./build",
         "resolveJsonModule": true,
         "esModuleInterop": true,
+        "moduleResolution": "node",
         "strict": true
     }
 }
